// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A custom Divider 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  border: none;
  background-color: turquoise;
}

.c1 {
  height: 20px;
  width: 100%;
}

<hr
  className="c0 c1"
  size="20px"
/>
`;

exports[`Default Divider 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  border: none;
  background-color: #C1C6CC;
}

.c1 {
  height: 1px;
  width: 100%;
}

<hr
  className="c0 c1"
  size="1px"
/>
`;

exports[`Divider with a variant 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  border: none;
  background-color: #707781;
}

.c1 {
  height: 1px;
  width: 100%;
}

<hr
  className="c0 c1"
  size="1px"
/>
`;
